--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Paul Giamatti's birthday 🎉</h1>
+            <h1>Today is Raul Giamatti's birthday 🎉</h1>
             <img id="bff-img" src="images/paul-giamatti.jpg">
             <h2 id="bday-age">56 years old</h2>
             <h4 id="bday-date">06.06.1967</h4>
